--- a/Twitter/PhotoCell.xib
+++ b/Twitter/PhotoCell.xib
@@ -2,18 +2,141 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="PhotoCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="302" id="KGk-i7-Jjw" customClass="PhotoCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="239"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tKY-mh-8k4">
+                        <rect key="frame" x="8" y="23" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="60" id="AXI-Pj-fmv"/>
+                            <constraint firstAttribute="width" constant="60" id="th6-5E-LBa"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmq-X8-dB0">
+                        <rect key="frame" x="76" y="20" width="46.5" height="23.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wD-MS-pD9">
+                        <rect key="frame" x="129" y="21" width="36.5" height="20.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
+                        <color key="textColor" red="0.79607843140000001" green="0.7725490196" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX2-cy-LuU">
+                        <rect key="frame" x="282" y="23" width="29.5" height="16.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
+                        <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqY-ow-Pil">
+                        <rect key="frame" x="76" y="46" width="236" height="20.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rjn-7C-EWW">
+                        <rect key="frame" x="72" y="73" width="240" height="128"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="240" id="x1W-Rr-U3k"/>
+                            <constraint firstAttribute="height" constant="128" id="zAy-lX-31I"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJ0-f0-o0l">
+                        <rect key="frame" x="72" y="211" width="14" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="5cy-z0-FY9"/>
+                            <constraint firstAttribute="width" constant="14" id="gOL-40-J2E"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="14" id="jRB-7S-tab"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="uTy-ii-Dbu"/>
+                        </constraints>
+                        <state key="normal" image="reply">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RAb-pV-NKh">
+                        <rect key="frame" x="170" y="211" width="14" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="14" id="4FT-85-trI"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="14" id="5xv-Au-Z8g"/>
+                            <constraint firstAttribute="height" constant="14" id="DNb-4O-P6B"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="pAl-YS-jbD"/>
+                        </constraints>
+                        <state key="normal" image="retweet">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MLV-cJ-Kuz">
+                        <rect key="frame" x="272" y="211" width="14" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="14" id="8zO-bp-GJ5"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="Mv3-0A-bPa"/>
+                            <constraint firstAttribute="height" constant="14" id="Okv-CH-Ai9"/>
+                            <constraint firstAttribute="width" constant="14" id="T9j-85-rRK"/>
+                        </constraints>
+                        <state key="normal" image="favorite">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSe-wd-O05">
+                        <rect key="frame" x="8" y="5" width="29.5" height="16.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="12"/>
+                        <color key="textColor" red="0.47604776069999999" green="0.43302370480000002" blue="0.48086144180000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="AqY-ow-Pil" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="8" id="0eV-kq-dcH"/>
+                    <constraint firstItem="OSe-wd-O05" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="1u8-pF-SUC"/>
+                    <constraint firstItem="wJ0-f0-o0l" firstAttribute="centerY" secondItem="RAb-pV-NKh" secondAttribute="centerY" id="Fpk-hf-dN0"/>
+                    <constraint firstAttribute="bottom" secondItem="RAb-pV-NKh" secondAttribute="bottom" constant="13.5" id="Igv-dA-6u5"/>
+                    <constraint firstAttribute="bottom" secondItem="MLV-cJ-Kuz" secondAttribute="bottom" constant="13.5" id="LBR-G6-KfY"/>
+                    <constraint firstItem="tKY-mh-8k4" firstAttribute="top" secondItem="OSe-wd-O05" secondAttribute="bottom" constant="2" id="McZ-d4-Gym"/>
+                    <constraint firstItem="wJ0-f0-o0l" firstAttribute="centerY" secondItem="MLV-cJ-Kuz" secondAttribute="centerY" id="OUl-5Q-0uG"/>
+                    <constraint firstItem="qmq-X8-dB0" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="8" id="Oja-gR-n2p"/>
+                    <constraint firstItem="Rjn-7C-EWW" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="4" id="OlR-pC-5wL"/>
+                    <constraint firstItem="wJ0-f0-o0l" firstAttribute="leading" secondItem="tKY-mh-8k4" secondAttribute="trailing" constant="4" id="ZQu-G9-Ky2"/>
+                    <constraint firstItem="MLV-cJ-Kuz" firstAttribute="leading" secondItem="RAb-pV-NKh" secondAttribute="trailing" constant="88" id="cV9-dj-qE2"/>
+                    <constraint firstItem="tKY-mh-8k4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="dsF-1l-ChB"/>
+                    <constraint firstItem="OSe-wd-O05" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ff7-Na-GGL"/>
+                    <constraint firstItem="AqY-ow-Pil" firstAttribute="top" secondItem="qmq-X8-dB0" secondAttribute="bottom" constant="2" id="ih3-g4-heG"/>
+                    <constraint firstItem="qmq-X8-dB0" firstAttribute="centerY" secondItem="3wD-MS-pD9" secondAttribute="centerY" id="mXS-Gc-DUg"/>
+                    <constraint firstItem="wJ0-f0-o0l" firstAttribute="top" secondItem="Rjn-7C-EWW" secondAttribute="bottom" constant="10" id="oA1-gm-RL2"/>
+                    <constraint firstAttribute="bottom" secondItem="wJ0-f0-o0l" secondAttribute="bottom" constant="13.5" id="qZ9-Ep-fmr"/>
+                    <constraint firstItem="Rjn-7C-EWW" firstAttribute="top" secondItem="AqY-ow-Pil" secondAttribute="bottom" constant="7" id="sNQ-PC-XhG"/>
+                    <constraint firstItem="3wD-MS-pD9" firstAttribute="leading" secondItem="qmq-X8-dB0" secondAttribute="trailing" constant="6" id="syJ-xg-5MS"/>
+                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="AqY-ow-Pil" secondAttribute="trailing" id="uPd-l0-Vlz"/>
+                    <constraint firstItem="qmq-X8-dB0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="x5J-sP-OPB"/>
+                    <constraint firstItem="RAb-pV-NKh" firstAttribute="leading" secondItem="wJ0-f0-o0l" secondAttribute="trailing" constant="84" id="xx9-2C-BTb"/>
+                    <constraint firstItem="hX2-cy-LuU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="ys3-kV-OpQ"/>
+                    <constraint firstAttribute="trailing" secondItem="hX2-cy-LuU" secondAttribute="trailing" constant="8" id="z4B-Y7-Wsu"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="325" y="271"/>
+            <connections>
+                <outlet property="mediaImageView" destination="Rjn-7C-EWW" id="mO8-2H-94H"/>
+                <outlet property="nameLabel" destination="qmq-X8-dB0" id="z7V-cG-fAO"/>
+                <outlet property="retweetedLabel" destination="OSe-wd-O05" id="LYD-aW-QNM"/>
+                <outlet property="screenName" destination="3wD-MS-pD9" id="ZbJ-LW-cIT"/>
+                <outlet property="timeLabel" destination="hX2-cy-LuU" id="fEf-iH-59A"/>
+                <outlet property="tweetLabel" destination="AqY-ow-Pil" id="2iV-Vu-mdS"/>
+                <outlet property="userImageView" destination="tKY-mh-8k4" id="1mi-la-BeE"/>
+            </connections>
+            <point key="canvasLocation" x="325" y="340.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="favorite" width="72" height="72"/>
+        <image name="reply" width="70" height="58"/>
+        <image name="retweet" width="44" height="44"/>
+    </resources>
 </document>
